--- a/TPAPIRestFrontWebValentinoCarignano/Animales.html
+++ b/TPAPIRestFrontWebValentinoCarignano/Animales.html
@@ -3,7 +3,7 @@
     <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Animales</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link href="styles.css" rel="stylesheet">
     </head>
@@ -12,9 +12,56 @@
         <div class="container-fluid">
             <div class="row">
                 <!-- Sección izquierda -->
-                <section class="col-md-5 bg-primary text-white p-4 seccion-formulario">
-                    <h2>Izquierda</h2>
-                    <p>Contenido de la sección izquierda.</p>
+                <section class="col-md-5 bg-light text-dark p-4 seccion-formulario">
+                    <h3>Listado Animales</h3>
+                    <div>
+                        <table class="animal-grid">
+                            <thead>
+                                <tr>
+                                    <th>Nombre</th>
+                                    <th>Raza</th>
+                                    <th>Fecha de Nacimiento</th>
+                                    <th>Sexo</th>
+                                    <th>Tipo</th>
+                                    <th>Dueño</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr>
+                                    <td>Max</td>
+                                    <td>Labrador</td>
+                                    <td>15/03/2019</td>
+                                    <td>Macho</td>
+                                    <td>Perro</td>
+                                    <td>Juan Pérez (DNI: 12345678)</td>
+                                </tr>
+                                <tr>
+                                    <td>Luna</td>
+                                    <td>Siamés</td>
+                                    <td>22/07/2020</td>
+                                    <td>Hembra</td>
+                                    <td>Gato</td>
+                                    <td>María Gómez (DNI: 87654321)</td>
+                                </tr>
+                                <tr>
+                                    <td>Rocky</td>
+                                    <td>Bulldog</td>
+                                    <td>10/11/2018</td>
+                                    <td>Macho</td>
+                                    <td>Perro</td>
+                                    <td>Carlos Ruiz (DNI: 45678912)</td>
+                                </tr>
+                                <tr>
+                                    <td>Kiwi</td>
+                                    <td>Periquito</td>
+                                    <td>05/01/2021</td>
+                                    <td>Hembra</td>
+                                    <td>Ave</td>
+                                    <td>Laura Díaz (DNI: 78912345)</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </div>                       
                 </section>
 
                 <!-- Sección derecha -->
@@ -72,6 +119,11 @@
                                         <input type="text" class="form-control" id="basic-url" aria-describedby="DNI">
                                     </div>
 
+                                </div>
+
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Confirmar</label>
                                 </div>
 
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
@@ -135,6 +187,11 @@
 
                                 </div>
 
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Confirmar</label>
+                                </div>
+
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
                                     <button type="button" class="btn btn-outline-secondary">Aceptar</button>
@@ -151,6 +208,11 @@
                                 <div class="input-group mb-3">
                                     <span class="input-group-text" id="basic-addon1">ID</span>
                                     <input type="text" class="form-control" aria-label="ID" aria-describedby="basic-addon1">
+                                </div>
+
+                                <div class="mb-3 form-check">
+                                    <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                                    <label class="form-check-label" for="exampleCheck1">Confirmar</label>
                                 </div>
 
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
