--- a/TPAPIRestFrontWebValentinoCarignano/Animales/Animales.html
+++ b/TPAPIRestFrontWebValentinoCarignano/Animales/Animales.html
@@ -9,10 +9,12 @@
     <link href="/Estilos/stylesCarrousel.css" rel="stylesheet">
     <link href="/Estilos/stylesGrid.css" rel="stylesheet">
     </head>
-    <body>
 
+    <header>
         <div id="navbar-container"></div>
+    </header>
 
+    <body>
         <!--SECCIONES-->
         <div class="container-fluid">
             <div class="row">
@@ -230,7 +232,7 @@
 
                                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
 
-                                    <button type="button" class="btn btn-outline-secondary">Aceptar</button>
+                                    <button onclick="alert()" type="button" class="btn btn-outline-secondary">Aceptar</button>
                                     <button type="button" class="btn btn-outline-secondary">Cancelar</button>
                                     
                                 </div>
@@ -257,5 +259,7 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous"></script>
     <script> fetch('/navbar.html').then(response => response.text()).then(data => {document.getElementById('navbar-container').innerHTML = data;});</script>
+    <script src='scripts.js'></script>
+    
     </body>
 </html>
